@@ -1,3 +1,10 @@
+2013-03-01  Ramon Casero  <rcasero@gmail.com>
+
+	* Add matlab/ManifoldToolbox/scimat_closed_surf_to_bw.m: (v0.1.0)
+
+	- SCIMAT_CLOSED_SURF_TO_BW Segment the inside of the triangulation
+	of a closed surface.
+
 2013-02-28  Ramon Casero  <rcasero@gmail.com>
 
 	* Add matlab/ManifoldToolbox/delaunay_sphere.m: (0.1.0)
